# UP-Delivery

./: .gitignore  pyproject.toml
Order/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Order/migrations/: 0001_initial.py  0002_delivery_domain_rules.py  0003_alter_issue_options_and_more.py  0004_order_client_confirmed_at_order_delivery_city_and_more.py  0005_normalize_new_statuses.py  0006_remove_order_cod_amount_and_more.py
UP/: asgi.py  settings.py  urls.py  wsgi.py
config/: settings.py  urls.py
static/css/: delivery.css
templates/: base.html  home.html
templates/delivery/: delivery_type_confirm_delete.html  delivery_type_detail.html  delivery_type_form.html  delivery_types_list.html
templates/issues/: issue_form.html  issue_list.html  issue_resolve_form.html
templates/orders/: client_history.html  courier_dashboard.html  dispatcher_dashboard.html  order_confirm_delete.html  order_detail.html  order_form.html  order_list.html  public_tracking.html  scan_tracking.html
templates/payments/: payment_detail.html  payment_form.html  payment_list.html
templates/registration/: login.html  logout.html  register.html
templates/status_history/: status_history_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_role.py  0003_alter_customuser_email_alter_customuser_full_name_and_more.py
