[project]
name = "up"
version = "0.1.0"
description = ""
authors = [
    {name = "Dima",email = "dimasirota42@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "django (==6.0.4)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
